--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <section class="relative py-20 px-6">
             <div class="max-w-7xl mx-auto text-center">
                 <h1 class="text-6xl md:text-8xl font-bold text-white mb-6 slide-up">
-                    We Exist to Helzp Scientists Win.
+                    We Exist to Help Scientists Win.
                 </h1>
                 <p class="text-xl md:text-2xl text-blue-200 mb-12 max-w-4xl mx-auto fade-in">
                     We empower scientific innovators to deploy world-changing climate technologies through commercial skills, risk tolerance, and community support.
